--- a/o2c.html
+++ b/o2c.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2P</title>
+    <title>O2C</title>
     <link rel="stylesheet" href="custom.css">
     <link rel="icon" href="./image/dacc_icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -89,10 +89,10 @@
         <div class="container-fluid p2p-hero">
             <div class="row">
                 <div class="col-12 col-md-6 text">
-                    <h1 class="display-3">Procure to Pay</h1>
+                    <h1 class="display-3">Order to Cash</h1>
                     <p>
-                        P2P (Procure-to-Pay) refers to the process of purchasing raw materials or <br>
-                        services from suppliers and paying for the resulting products or services. 
+                        O2C (Order-to-Cash) is a business process that involves the entire order processing 
+                        <br>cycle, from receiving orders to receiving full payment.
                     </p>
                     <button class="button-neutral-outline">
                         learn more
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="image">
-                        <img src="./image/P2P Picture.png" alt="">
+                        <img src="./image/O2C.png" alt="">
                     </div>
                 </div>
             </div>
@@ -110,37 +110,33 @@
     <section>
         <div class="container-fluid whatisp2p">
             <div class="text">
-                <h2 class="display-4">what is P2P</h2>
+                <h2 class="display-4">what is O2C</h2>
                 <p>
-                    Procure-to-Pay (P2P) is a business process that involves the purchase of goods or services by an organization, 
-                    from identifying the need to make a purchase, through the procurement process, up to the payment to the vendor or
-                    supplier. The process starts with identifying the need for goods or services, which can be initiated by a requisition 
-                    from a department or an employee. The requisition then goes through the approval process, which can involve multiple 
-                    levels of approval based on the amount or type of goods or services being purchased.
+                    Procure-to-Pay (P2P) is a business process that involves the purchase of goods or services by an organization, from identifying 
+                    the need to make a purchase, through the procurement process, up to the payment to the vendor or supplier. The process starts with 
+                    identifying the need for goods or services, which can be initiated by a requisition from a department or an employee. The requisition 
+                    then goes through the approval process, which can involve multiple levels of approval based on the amount or type of goods or services being purchased.
                 </p>
                 <p>
-                    Once the requisition is approved, it becomes a Purchase Order (PO), which is a legally binding agreement between 
-                    the buyer and the vendor or supplier. The PO contains details such as the quantity, price, delivery date, and payment 
-                    terms of the purchase. The vendor or supplier then delivers the goods or services, which are received and verified by 
-                    the buyer. The buyer then approves the invoice from the vendor or supplier, and the payment is made based on the terms 
-                    and conditions specified in the PO. 
+                    Once the requisition is approved, it becomes a Purchase Order (PO), which is a legally binding agreement between the buyer and the 
+                    vendor or supplier. The PO contains details such as the quantity, price, delivery date, and payment terms of the purchase. The vendor 
+                    or supplier then delivers the goods or services, which are received and verified by the buyer. The buyer then approves the invoice from 
+                    the vendor or supplier, and the payment is made based on the terms and conditions specified in the PO.
                 </p>                
                 <p>
-                    The P2P process involves different stakeholders within an organization, such as procurement, finance, and accounts 
-                    payable departments. Each stakeholder plays a critical role in ensuring that the process runs smoothly and efficiently. 
-                    The procurement department is responsible for identifying the need for goods or services and initiating the requisition 
-                    process. The finance department is responsible for ensuring that the purchase is within budget and the payment terms are 
-                    favorable to the organization. The accounts payable department is responsible for processing the invoices and making the 
-                    payment to the vendor or supplier.
+                    The P2P process involves different stakeholders within an organization, such as procurement, finance, and accounts payable departments. 
+                    Each stakeholder plays a critical role in ensuring that the process runs smoothly and efficiently. The procurement department is responsible 
+                    for identifying the need for goods or services and initiating the requisition process. The finance department is responsible for ensuring that 
+                    the purchase is within budget and the payment terms are favorable to the organization. The accounts payable department is responsible for processing 
+                    the invoices and making the payment to the vendor or supplier.
                 </p>
                 <p>
-                    An efficient P2P process can provide several benefits to an organization, such as cost savings, reduced cycle time, 
-                    increased visibility, and improved supplier relationships. Cost savings can be achieved by negotiating favorable terms 
-                    with suppliers, optimizing the procurement process, and reducing errors and discrepancies in the invoicing and payment 
-                    process. Reduced cycle time can be achieved by streamlining the procurement and payment processes, automating manual 
-                    tasks, and leveraging technology. Increased visibility can be achieved by having a centralized system that tracks the 
-                    entire P2P process and provides real-time information to all stakeholders. Improved supplier relationships can be 
-                    achieved by ensuring timely payments, resolving issues and disputes quickly, and providing feedback to suppliers.
+                    An efficient P2P process can provide several benefits to an organization, such as cost savings, reduced cycle time, increased visibility, and improved 
+                    supplier relationships. Cost savings can be achieved by negotiating favorable terms with suppliers, optimizing the procurement process, and reducing errors 
+                    and discrepancies in the invoicing and payment process. Reduced cycle time can be achieved by streamlining the procurement and payment processes, automating 
+                    manual tasks, and leveraging technology. Increased visibility can be achieved by having a centralized system that tracks the entire P2P process and provides 
+                    real-time information to all stakeholders. Improved supplier relationships can be achieved by ensuring timely payments, resolving issues and disputes quickly, 
+                    and providing feedback to suppliers.
                 </p>
             </div>
         </div>
@@ -156,13 +152,13 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Purchase Requisition (PR)</h1>
+                        <h1>Quotation Sheet (QS)</h1>
                         <p>
-                            Purchase request is a document used by an organization to initiate the procurement process for goods or services.
+                            Quotation Sheet (QS) is a document used to request and compare quotes from suppliers for specific goods or services.
                         </p>
                         <ul>
-                            <li class="feature-list">Streamlining the procurement process can increase spending visibility and control.</li>
-                            <li class="feature-list">Implementing procurement automation can prevent maverick spending and improve budget management.</li>
+                            <li class="feature-list">Provides an itemized list of products or services with their respective prices, enabling better comparison and evaluation of supplier offers.</li>
+                            <li class="feature-list">Helps to negotiate more favorable terms by specifying delivery dates, payment terms, and other relevant conditions.</li>
                         </ul>
                     </div>
                 </div>
@@ -175,17 +171,16 @@
                 </div>
                 <div class="col-12 col-lg-3 oder-2 order-lg-1">
                     <div class="feature-text">
-                        <h1>Purchase Order (PO)</h1>
+                        <h1>Sales Order (SO)</h1>
                         <p>
-                            A purchase order is a document that authorizes a purchase transaction between a buyer and a seller.
+                            Sales Order (SO) is a document used to confirm a customer's order, including product details, quantity, pricing, and delivery date.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                Purchase orders record purchase terms, which reduces the risk of misunderstandings and disputes.
+                                Allows for efficient tracking of customer orders and order history.
                             </li>
                             <li class="feature-list">
-                                Implementing purchase orders can streamline purchasing, improve supply chain 
-                                management, and reduce costs.
+                                Enables better coordination between sales, production, and shipping departments for timely delivery of products to customers.
                             </li>
                         </ul>
                     </div>
@@ -199,16 +194,16 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Business Invoice Management (BIM)</h1>
+                        <h1>Shipping Invoice/Memo (SIM)</h1>
                         <p>
-                            BIM is the process of managing supplier invoices for financial and transactional record-keeping.
+                            A shipping invoice memo is a document used to specify the details of a shipment, including its contents, value, and destination.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                Improved efficiency: BIM streamlines the invoicing process, reducing the need for manual data entry and increasing accuracy.
+                                Shipping invoice memo provides a detailed record of the shipment including the date, items, quantity, and destination.
                             </li>
                             <li class="feature-list">
-                                Cost savings: By automating invoice management, BIM can help businesses reduce processing costs and avoid late payment fees.
+                                A shipping invoice memo provides shipment records and can be used for billing and payment purposes.
                             </li>
                         </ul>
                     </div>
@@ -222,16 +217,16 @@
                 </div>
                 <div class="col-12 col-lg-3 oder-2 order-lg-1">
                     <div class="feature-text">
-                        <h1>Purchase Invoice Matching (PIM)</h1>
+                        <h1>Sales Invoice (SI)</h1>
                         <p>
-                            PIM is the process of comparing supplier invoices to orders and receipts to ensure accuracy before payment.
+                            A sales invoice (SL) is a document that serves as proof of a sales transaction between a buyer and a seller.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                PIM ensures invoice accuracy by matching them to orders and receipts, reducing errors and preventing overpayment.
+                                Record of the transaction: A sales invoice (SL) provides a detailed record of the transaction, including the date of the sale, the items sold, and the price of each item.
                             </li>
                             <li class="feature-list">
-                                PIM provides financial visibility, enabling better management of purchasing and payment activities for improved cost control.
+                                Sales invoice facilitates payment collection by providing payment details and instructions to the buyer.
                             </li>
                         </ul>
                     </div>
@@ -245,17 +240,17 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Credit Note (BCN)</h1>
+                        <h1>Sales Receipt Note (SRN)</h1>
                         <p>
-                            A BCN is a seller's credit document for a refund, credit, or adjustment that reduces the buyer's owed amount.
+                            A sales receipt note (SRN) is a document that acknowledges the receipt of payment for goods or services sold.   
                         </p>
                         <ul>
                             <li class="feature-list">
-                                BCNs improve customer satisfaction by resolving disputes quickly and accurately, leading to increased loyalty.
+                                Record of Sales: SRN provides a record of sales and serves as proof of purchase for the buyer, which can be helpful in the case of returns or warranty claims.
                             </li>
                             <li class="feature-list">
-                                BCNs enable better financial management by providing accurate records of refunds, credits, and adjustments to 
-                                help avoid overpayments and manage finances effectively.
+                                SRN can be used for accounting purposes, as it includes important details such as the date of sale, items sold, price, and taxes, helping to track 
+                                sales revenue and manage financial records.
                             </li>
                         </ul>
                     </div>
@@ -341,18 +336,17 @@
             <div class="follow">
                 <h5>follow us</h5>
                 <div class="follow-item">
-                    <a href="#"><img src="/image/asset/Vector.png" alt=""></a>
+                    <a href="#">facebook</a>
                 </div>
                 <div class="follow-item">
-                    <a href="#"><img src="/image/asset/IG.png" alt=""></a>
+                    <a href="#">line</a>
                 </div>
                 <div class="follow-item">
-                    <a href="#"><img src="/image/asset/LINE_New_App_Icon_(2020-12).png" alt=""></a>
+                    <a href="ig">ig </a>
                 </div>
             </div>
         </div>
     </footer>
-    
     <script src="main.js"></script>
 
 
