--- a/fin-gl.html
+++ b/fin-gl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2P</title>
+    <title>O2C</title>
     <link rel="stylesheet" href="custom.css">
     <link rel="icon" href="./image/dacc_icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -89,10 +89,10 @@
         <div class="container-fluid p2p-hero">
             <div class="row">
                 <div class="col-12 col-md-6 text">
-                    <h1 class="display-3">Procure to Pay</h1>
+                    <h1 class="display-3">FIN - GL</h1>
                     <p>
-                        P2P (Procure-to-Pay) refers to the process of purchasing raw materials or <br>
-                        services from suppliers and paying for the resulting products or services. 
+                        FIN-GL is the core accounting system that tracks and organizes financial
+                        <br> transactions for an organization.
                     </p>
                     <button class="button-neutral-outline">
                         learn more
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="image">
-                        <img src="./image/P2P Picture.png" alt="">
+                        <img src="./image/O2C.png" alt="">
                     </div>
                 </div>
             </div>
@@ -110,37 +110,26 @@
     <section>
         <div class="container-fluid whatisp2p">
             <div class="text">
-                <h2 class="display-4">what is P2P</h2>
+                <h2 class="display-4">What is FIN-GL</h2>
                 <p>
-                    Procure-to-Pay (P2P) is a business process that involves the purchase of goods or services by an organization, 
-                    from identifying the need to make a purchase, through the procurement process, up to the payment to the vendor or
-                    supplier. The process starts with identifying the need for goods or services, which can be initiated by a requisition 
-                    from a department or an employee. The requisition then goes through the approval process, which can involve multiple 
-                    levels of approval based on the amount or type of goods or services being purchased.
+                    Fin-GL, or Financial General Ledger, is a central component of any accounting software that records all financial transactions within an
+                    organization. It is a financial accounting module that helps organizations manage their financial records, including revenue, expenses,
+                    assets, and liabilities. The module is designed to provide an accurate and up-to-date financial picture of the organization at any given time.
                 </p>
                 <p>
-                    Once the requisition is approved, it becomes a Purchase Order (PO), which is a legally binding agreement between 
-                    the buyer and the vendor or supplier. The PO contains details such as the quantity, price, delivery date, and payment 
-                    terms of the purchase. The vendor or supplier then delivers the goods or services, which are received and verified by 
-                    the buyer. The buyer then approves the invoice from the vendor or supplier, and the payment is made based on the terms 
-                    and conditions specified in the PO. 
+                    The Fin-GL module is responsible for generating financial statements such as balance sheets, income statements, and cash flow statements, 
+                    which provide key insights into an organization's financial performance. The module helps organizations streamline their financial processes and
+                     ensure compliance with accounting standards, including Generally Accepted Accounting Principles (GAAP) and International Financial Reporting Standards (IFRS).
                 </p>                
                 <p>
-                    The P2P process involves different stakeholders within an organization, such as procurement, finance, and accounts 
-                    payable departments. Each stakeholder plays a critical role in ensuring that the process runs smoothly and efficiently. 
-                    The procurement department is responsible for identifying the need for goods or services and initiating the requisition 
-                    process. The finance department is responsible for ensuring that the purchase is within budget and the payment terms are 
-                    favorable to the organization. The accounts payable department is responsible for processing the invoices and making the 
-                    payment to the vendor or supplier.
+                    With Fin-GL, organizations can track and manage financial transactions across multiple accounts and currencies. The module helps automate the accounting
+                    process, reducing the risk of errors and saving time for the finance team. It also provides a powerful reporting capability, allowing organizations to 
+                    analyze financial data to make informed business decisions.
                 </p>
                 <p>
-                    An efficient P2P process can provide several benefits to an organization, such as cost savings, reduced cycle time, 
-                    increased visibility, and improved supplier relationships. Cost savings can be achieved by negotiating favorable terms 
-                    with suppliers, optimizing the procurement process, and reducing errors and discrepancies in the invoicing and payment 
-                    process. Reduced cycle time can be achieved by streamlining the procurement and payment processes, automating manual 
-                    tasks, and leveraging technology. Increased visibility can be achieved by having a centralized system that tracks the 
-                    entire P2P process and provides real-time information to all stakeholders. Improved supplier relationships can be 
-                    achieved by ensuring timely payments, resolving issues and disputes quickly, and providing feedback to suppliers.
+                    Overall, the Fin-GL module is essential for organizations of all sizes that want to manage their finances effectively. It helps ensure accuracy and compliance
+                    in financial reporting, provides a clear view of the financial health of the organization, and enables organizations to make data-driven decisions to achieve their
+                    financial goals.
                 </p>
             </div>
         </div>
@@ -156,13 +145,16 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Purchase Requisition (PR)</h1>
+                        <h1>Inter Company General Ledger (IGL)</h1>
                         <p>
-                            Purchase request is a document used by an organization to initiate the procurement process for goods or services.
+                            Inter company general ledger (IGL) is a financial accounting tool that tracks transactions between different companies within the same organization.
                         </p>
                         <ul>
-                            <li class="feature-list">Streamlining the procurement process can increase spending visibility and control.</li>
-                            <li class="feature-list">Implementing procurement automation can prevent maverick spending and improve budget management.</li>
+                            <li class="feature-list">
+                                Consolidating financial data: IGL can consolidate financial data from different entities in the same group, allowing for 
+                                a comprehensive view of the group's financial performance.
+                            </li>
+                            <li class="feature-list">IGL automates intercompany transactions, reducing errors and providing real-time visibility into balances and activity between entities.</li>
                         </ul>
                     </div>
                 </div>
@@ -175,17 +167,17 @@
                 </div>
                 <div class="col-12 col-lg-3 oder-2 order-lg-1">
                     <div class="feature-text">
-                        <h1>Purchase Order (PO)</h1>
+                        <h1>Adding and Editing Chart of Accounts</h1>
                         <p>
-                            A purchase order is a document that authorizes a purchase transaction between a buyer and a seller.
+                            Adding and editing chart of accounts is creating and modifying a list of accounts for tracking financial transactions.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                Purchase orders record purchase terms, which reduces the risk of misunderstandings and disputes.
+                                Adding and editing chart of accounts improves financial tracking and reporting by enabling accurate and specific tracking 
+                                of financial transactions for better analysis and reporting.
                             </li>
                             <li class="feature-list">
-                                Implementing purchase orders can streamline purchasing, improve supply chain 
-                                management, and reduce costs.
+                                Chart of accounts customization allows for flexibility in financial management and reporting to meet an organization's specific needs and requirements.
                             </li>
                         </ul>
                     </div>
@@ -199,16 +191,18 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Business Invoice Management (BIM)</h1>
+                        <h1>Balance Brought Forward</h1>
                         <p>
-                            BIM is the process of managing supplier invoices for financial and transactional record-keeping.
+                            Balance brought forward is the amount of money remaining in an account at the start of a new accounting period.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                Improved efficiency: BIM streamlines the invoicing process, reducing the need for manual data entry and increasing accuracy.
+                                BBF provides accurate financial data for tracking account balances, identifying trends, and creating financial 
+                                statements, facilitating better financial management.
                             </li>
                             <li class="feature-list">
-                                Cost savings: By automating invoice management, BIM can help businesses reduce processing costs and avoid late payment fees.
+                                BBF improves decision-making by providing a clear financial position, including outstanding debts, revenue, and 
+                                obligations, that may affect business operations.
                             </li>
                         </ul>
                     </div>
@@ -222,16 +216,18 @@
                 </div>
                 <div class="col-12 col-lg-3 oder-2 order-lg-1">
                     <div class="feature-text">
-                        <h1>Purchase Invoice Matching (PIM)</h1>
+                        <h1>Managing a Deposit Account Ledger</h1>
                         <p>
-                            PIM is the process of comparing supplier invoices to orders and receipts to ensure accuracy before payment.
+                            Managing a deposit account ledger involves keeping track of deposits and withdrawals made from a particular account.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                PIM ensures invoice accuracy by matching them to orders and receipts, reducing errors and preventing overpayment.
+                                Accurate record-keeping: Managing a deposit account ledger ensures accurate record-keeping, providing a clear picture 
+                                of the account's balance and activity.
                             </li>
                             <li class="feature-list">
-                                PIM provides financial visibility, enabling better management of purchasing and payment activities for improved cost control.
+                                Managing a deposit account ledger allows for better financial management by tracking income, expenses, and cash flow, 
+                                leading to informed financial decision-making.
                             </li>
                         </ul>
                     </div>
@@ -245,17 +241,43 @@
                 </div>
                 <div class="col-12 col-lg-3 order-md-2">
                     <div class="feature-text">
-                        <h1>Credit Note (BCN)</h1>
+                        <h1>Asset Management</h1>
                         <p>
-                            A BCN is a seller's credit document for a refund, credit, or adjustment that reduces the buyer's owed amount.
+                            Asset management is the process of managing an organization's assets, such as investments, infrastructure, and equipment, to 
+                            maximize their value and minimize associated risks.
                         </p>
                         <ul>
                             <li class="feature-list">
-                                BCNs improve customer satisfaction by resolving disputes quickly and accurately, leading to increased loyalty.
+                                Optimization of asset utilization: Asset management optimizes asset utilization by tracking location, maintenance, and depreciation, 
+                                resulting in reduced downtime, increased productivity, and improved ROI.
                             </li>
                             <li class="feature-list">
-                                BCNs enable better financial management by providing accurate records of refunds, credits, and adjustments to 
-                                help avoid overpayments and manage finances effectively.
+                                Improved financial planning: Accurate tracking of assets and associated costs allows for better financial planning and informed 
+                                decision-making to meet the organization's goals.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row feature-event ">
+                <div class="col-12 col-lg-3 items oder-1 order-lg-2">
+                    <div class="feature-image">
+                        <img src="./image/Subtract.png">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-3 oder-2 order-lg-1">
+                    <div class="feature-text">
+                        <h1>Depreciation Expense</h1>
+                        <p>
+                            Depreciation expense is the portion of an asset's cost that is allocated over its useful life.
+                        </p>
+                        <ul>
+                            <li class="feature-list">
+                                Accurate financial reporting: Depreciation expense accounts for the wear and tear of assets over their useful lives, 
+                                ensuring accurate financial reporting.
+                            </li>
+                            <li class="feature-list">
+                                Tax benefits: Depreciation expense can result in tax deductions for organizations, reducing their taxable income and overall tax liability.
                             </li>
                         </ul>
                     </div>
@@ -352,7 +374,6 @@
             </div>
         </div>
     </footer>
-    
     <script src="main.js"></script>
 
 
